<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameAddTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddTableFragment"

    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name_table"
        app:helperText="@string/required_text"
        app:endIconMode="clear_text"
        app:counterMaxLength="25"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_table_bar"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnSave"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"/>
        <Space
            android:layout_width="30dp"
            android:layout_height="10dp"/>
        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_salir"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"/>

    </LinearLayout>

</LinearLayout>