<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_tables"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"

    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTableName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_id_table"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/tvPrecioTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_total_price"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_state_account"
            android:textSize="18dp" />
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>